# pytest-vulture

./: DEVELOPMENT.rst  LICENSE  README.md  README.rst  coverage.ini  pylint.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
src/pytest_vulture/: __init__.py  plugin.py  setup_manager.py
src/pytest_vulture/conf/: __init__.py  base.py  package.py  reader.py  vulture.py
src/pytest_vulture/vulture/: __init__.py  comment.py  manager.py  output_line.py  print_parser.py
test/: __init__.py
test/examples/ini/: full.ini  pyproject.toml
test/examples/setups/: setup  setup_broken  setup_entry_p_not_found  setup_file_not_found  setup_no_entry_point  setup_with_entry_point
test/examples/setups/test/: main.py
test/examples/vulture_tests/bug_18_2020/: main.py
test/examples/vulture_tests/comments/: main.py
test/examples/vulture_tests/easy/: main.py  other.py
test/tests/: conftest.py
test/tests/functional/: __init__.py  test_call.py  test_conf.py  test_setup.py
test/tests/unit/: test_line_parsing.py  test_setup.py  test_vulture_manager.py
